--- a/client/src/components/info/info.css
+++ b/client/src/components/info/info.css
@@ -87,3 +87,21 @@
     position: absolute;
     bottom: 20px;
 }
+
+@media screen and (max-width: 480px){
+    .info{
+        flex-direction: column;
+    }
+
+    .info-left-wrapper{
+        height: 100%;
+        padding: 15px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .info-desc{
+        display: none;
+    }
+}
