--- a/client/src/components/portfolioList/portfolioList.css
+++ b/client/src/components/portfolioList/portfolioList.css
@@ -25,3 +25,17 @@
     justify-content: space-between;
     width: 100%;
 }
+
+@media screen and (max-width: 480px){
+    .pl{
+        padding: 5px;
+    }
+
+    .pl-text{
+        width: 95%;
+    }
+
+    .pl-desc{
+        display: none;
+    }
+}
