--- a/client/src/components/about/about.css
+++ b/client/src/components/about/about.css
@@ -1,5 +1,8 @@
 .about{
     height: 100%;
+    display: flex;
+    margin: 50px 0;
+    align-items: center;
 }
 
 .about-left{
@@ -7,34 +10,36 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position:relative;
     height: 100%;
 }
 
 .about-rigth{
-    flex:1
-}
-
-.about-card.bg{
-    position: absolute;
-    top: 50px;
-    left: 50px
-
+    flex:1;
+    justify-content: space-around;
 }
 
 .about-card{
-    width: 60%;
-    height: 70vh;
-    border-radius: 30px;
-    position: relative;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about-img{
-    width: 100%;
+    width: 60%;
     height: 100%;
     object-fit: cover;
 }
+
+.about-title{
+    font-size: 40px;
+}
+
+.about-desc{
+    font-size: 21px;
+    width: 90%;
+    margin-top: 30px;
+}
+
 
 @media screen and (max-width: 480px){
     .about{
@@ -47,10 +52,6 @@
         width: 100%;
     }
 
-    .about-card{
-        height: 30vh;
-    }
-
     .about-card.bg{
         display: none;
     }
@@ -59,4 +60,7 @@
         padding: 20px;
     }
 
+    .about-desc{
+        width: 100%;
+    }
 }
