--- a/client/src/components/contact/contact.css
+++ b/client/src/components/contact/contact.css
@@ -1,17 +1,20 @@
 .contact{
-    height: 100vh;
+    height: 100%;
     position: relative;
+    margin-top: 50px;
 }
 
 .contact-bg{
     width: 20px;
     height: 100%;
     position: absolute;
+    background-color: #4361ee;
 }
 
 .contact-wrapper{
     padding: 50px;
     display: flex;
+    flex-direction: column;
 }
 
 .contact-left{
@@ -53,18 +56,18 @@ form{
 }
 
 input{
-    width: 50%;
+    width: 45%;
     height: 50px;
     border: none;
     border-bottom: 1px solid black;
-    margin: 10px 0;
+    margin: 20px 20px 20px 0;
     font-size: 15px;
     padding-left: 10px;
 }
 
 textarea{
-    width: 100%;
-    margin: 10px 0;
+    width: 92%;
+    margin: 20px 20px 20px 0;
     font-size: 15px;
     padding-left: 10px;
 }
@@ -72,10 +75,20 @@ textarea{
 button{
     border: none;
     padding: 15px;
-    border-color: blue;
-    color: #fff;
+    background: #4361ee;
+    color: white;
     font-weight: 500;
     cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    transition: 0.4s ease-in-out;
+    border: 1px solid#4361ee;
+}
+
+button:hover{
+    color: #4361ee;
+    background: white;
+    transform: scale(1.15);
 }
 
 @media screen and (max-width: 480px){
@@ -105,7 +118,7 @@ button{
     
     input{
         width: 100%;
-        height: 30px;
+        height: 50px;
     }
 
     button{
