--- a/client/src/components/portfolioList/portfolioList.css
+++ b/client/src/components/portfolioList/portfolioList.css
@@ -1,22 +1,20 @@
 .pl{
     padding: 50px 100px;
     display: flex;
-    font-display: column;
+    flex-direction: column;
     align-items: center;
     text-align: center;
+    
 }
 
 .pl-text{
     width: 65%;
+    margin-bottom: 50px;
 }
 
 .pl-title{
     font-size: 50px;
     font-weight: 500;
-}
-
-.pl-desc{
-    margin: 20px 0;
 }
 
 .pl-list{
