--- a/client/src/components/toggle/toggle.css
+++ b/client/src/components/toggle/toggle.css
@@ -5,8 +5,8 @@
     border: 1px solid gray;
     background-color: white;
     position: fixed;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 50%;
     z-index: 99;
     display: flex;
     align-items: center;
