Added modals for projects that are in github with a header, video, summary and links to it tree on github and my own linkedin

--- a/client/src/components/portfolioItem/portfolioItem.css
+++ b/client/src/components/portfolioItem/portfolioItem.css
@@ -33,6 +33,10 @@
     transform: translateY(-100%);
 }
 
+.openModal{
+    cursor: pointer;
+}
+
 @media screen and (max-width: 480px){
     .p{
         width: 80%;
