--- a/client/src/components/info/info.css
+++ b/client/src/components/info/info.css
@@ -66,13 +66,6 @@
     color: #4361ee
 }
 
-.info-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position:absolute;
-}
-
 .info-bg{
     clip-path: polygon(100% 0, 100% 0, 0 100%, 100% 100%);
 
@@ -94,6 +87,7 @@
 @media screen and (max-width: 480px){
     .info{
         flex-direction: column;
+        height: 100%;
     }
 
     .info-left-wrapper{
@@ -105,6 +99,9 @@
     }
 
     .info-desc{
+        display: none;
+    }
+    .info-rigth{
         display: none;
     }
 }
