--- a/client/src/components/toggle/toggle.css
+++ b/client/src/components/toggle/toggle.css
@@ -27,3 +27,9 @@
     position: absolute;
     cursor: pointer;
 }
+
+@media screen and (max-width: 480px){
+    .toggle{
+        right: 43%;
+    }
+}
