--- a/client/src/components/info/info.css
+++ b/client/src/components/info/info.css
@@ -68,13 +68,13 @@
 
 .info-bg{
     clip-path: polygon(100% 0, 100% 0, 0 100%, 100% 100%);
-
     background-color: #4361ee;
     width: 100%;
     height: 100%;
     position: absolute;
     top:0;
     right: 0;
+    transition: 0.5s linear;
 }
 
 .info-scroll{
@@ -85,17 +85,13 @@
 }
 
 @media screen and (max-width: 480px){
-    .info{
-        flex-direction: column;
-        height: 100%;
-    }
 
     .info-left-wrapper{
         height: 100%;
         padding: 15px;
         align-items: center;
         text-align: center;
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
     .info-desc{
