--- a/client/src/components/modalPortfolio/modalPortfolio.css
+++ b/client/src/components/modalPortfolio/modalPortfolio.css
@@ -9,12 +9,14 @@
   align-items: center;
   justify-content: center;
   z-index: 3;
+  transition: 0.5s linear;
 }
 
 .m-content{
   width: 80%;
   height: 70%;
   background-color: #fff;
+  transition: 0.5s linear;
 }
 
 .m-header, .m-footer{
@@ -29,6 +31,8 @@
   padding: 10px;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
+  background-color: #fff;
+  transition: 0.5s linear;
 }
 
 .m-body-youtube-video iframe{
@@ -55,6 +59,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 20px 0;
+  flex-wrap: wrap;
 }
 
 .m-body-link{
@@ -71,4 +76,18 @@
   transform: scale(1.15);
   color: #fff;
   background: #333333;
+}
+
+.modal-img{
+  width: 50%;
+}
+
+@media screen and (max-width: 820px) {
+  .modal-img{
+    width: 100%;
+  }
+  .m-content {
+    width: 90%;
+    height: 88%;
+}
 }
