--- a/client/src/components/portfolioItem/portfolioItem.css
+++ b/client/src/components/portfolioItem/portfolioItem.css
@@ -1,6 +1,6 @@
 .p{
     width: 30%;
-    height: 40vh;
+    height: 30vh;
     margin: 20px 10px;
     border: 2px solid rgb(224, 224, 224);
     border-radius: 10px 10px 0 0;
@@ -14,6 +14,7 @@
     align-items: center;
     position: sticky;
     z-index: 2;
+    transition: 0.5s linear;
 }
 
 .p-circle{
@@ -22,6 +23,7 @@
     border-radius: 50%;
     margin: 3px;
     background-color: #fff;
+    transition: 0.5s linear;
 }
 
 .p-img{
@@ -35,6 +37,14 @@
 
 .openModal{
     cursor: pointer;
+}
+
+@media screen and (max-width: 820px){
+    .p{
+        width: 80%;
+        height: 20vh;
+        margin: 30px auto;
+    }
 }
 
 @media screen and (max-width: 480px){
