--- a/client/src/components/portfolioItem/portfolioItem.css
+++ b/client/src/components/portfolioItem/portfolioItem.css
@@ -41,8 +41,8 @@
 
 @media screen and (max-width: 820px){
     .p{
-        width: 80%;
-        height: 20vh;
+        width: 45%;
+        height: 30vh;
         margin: 30px auto;
     }
 }
@@ -52,5 +52,9 @@
         width: 80%;
         height: 30vh;
         margin: 30px auto;
+    }
+
+    .m-body-youtube-video img {
+        width: 100%;
     }
 }
